--- a/private_dot_config/nvim/lazyvim.json.tmpl
+++ b/private_dot_config/nvim/lazyvim.json.tmpl
@@ -6,15 +6,19 @@
     "lazyvim.plugins.extras.editor.aerial",
     "lazyvim.plugins.extras.editor.mini-files",
     "lazyvim.plugins.extras.editor.symbols-outline",
-    "lazyvim.plugins.extras.formatting.prettier",
     "lazyvim.plugins.extras.lang.clangd",
     "lazyvim.plugins.extras.lang.markdown",
     "lazyvim.plugins.extras.lang.python",
-    "lazyvim.plugins.extras.lang.typescript",
     "lazyvim.plugins.extras.lang.yaml",
     "lazyvim.plugins.extras.test.core",
     "lazyvim.plugins.extras.ui.edgy",
-    "lazyvim.plugins.extras.vscode"
+    {{- if eq .profile "work" }}
+    "lazyvim.plugins.extras.lang.typescript",
+    "lazyvim.plugins.extras.formatting.prettier",
+    {{- end }}
+    {{- if eq .profile "personal" }}
+    "lazyvim.plugins.extras.lang.rust",
+    {{- end }}
   ],
   "news": {
     "NEWS.md": "2123"
