--- a/private_dot_config/nvim/lua/config/options.lua.tmpl
+++ b/private_dot_config/nvim/lua/config/options.lua.tmpl
@@ -2,4 +2,6 @@
 -- Default options that are always set: https://github.com/LazyVim/LazyVim/blob/main/lua/lazyvim/config/options.lua
 -- Add any additional options here
 
+{{- if eq .profile "work"}}
 vim.g.autoformat = false
+{{- end }}
