--- a/private_dot_config/nvim/lua/plugins/lsp.lua.tmpl
+++ b/private_dot_config/nvim/lua/plugins/lsp.lua.tmpl
@@ -1,3 +1,4 @@
+{{- if eq .profile "work"}}
 return {
   "neovim/nvim-lspconfig",
   opts = {
@@ -14,3 +15,4 @@ return {
     },
   },
 }
+{{- end }}
