Update to latest config

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -64,9 +64,6 @@
 [merge]
 	conflictstyle = zdiff3
 
-[rebase]
-  autosquash = true
-
 [help]
 	autocorrect = prompt
 
@@ -77,8 +74,8 @@
 	algorithm = histogram
 	submodule = log
 
-[submodule]
-	recurse = true
-
 [status]
 	submoduleSummary = true
+
+[pull]
+  rebase = true
