Make XDG_RUNTIME_DIR only applicable under "personal"
This was breaking a lot of stuff when running in full Ubuntu

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -47,8 +47,10 @@ end
 ## Chezmoi abbreviation
 abbr cm chezmoi
 
+{{- if eq .profile "personal" }}
 ### Neovim
 set -gx XDG_RUNTIME_DIR /tmp/
+{{- end}}
 
 ### Misc
 alias here "explorer.exe ."
