--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,3 +1,5 @@
+# https://blog.gitbutler.com/how-git-core-devs-configure-git/
+
 [core]
 	autocrlf = input
 	editor = nvim
@@ -7,32 +9,10 @@
 [user]
 	name = Bryan Niwa
 	email = {{ .email | quote }}
-  {{- if eq .profile "personal" }}
-  signingkey = /home/bniwa/.ssh/id_ed25519.pub
-  {{- end}}
-
 {{- if eq .profile "work" }}
 [includeIf "gitdir:~/projects/webb-enterphone-directory/.git"]
 	autocrlf = false
 {{- end}}
-
-{{- if eq .profile "personal" }}
-[gpg]
-	format = ssh
-
-[commit]
-	gpgsign = true
-{{- end}}
-
-[alias]
-    lg = lg1
-    lg1 = lg1-specific --all
-    lg2 = lg2-specific --all
-    lg3 = lg3-specific --all
-
-    lg1-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)'
-    lg2-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(auto)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
-    lg3-specific = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset) %C(bold cyan)(committed: %cD)%C(reset) %C(auto)%d%C(reset)%n''          %C(white)%s%C(reset)%n''          %C(dim white)- %an <%ae> %C(reset) %C(dim white)(committer: %cn <%ce>)%C(reset)'
 
 [init]
 	defaultBranch = main
@@ -78,7 +58,31 @@
 	submoduleSummary = true
 
 [pull]
-  rebase = true
+	rebase = true
+
+[tag]
+	sort = version:refname
+
+[push]
+	autoSetupRemote = true
+	; followTags = true ; automatically push tags
+
+[fetch]
+	prune = true
+	pruneTags = true
+	all = true
+
+[commit]
+	verbose = true
+
+[rerere]
+	enabled = true
+	autoupdate = true
+
+[rebase]
+	autoSquash = true
+	autostash = true
+	updateRefs = true
 
 [difftool "nvim"]
 	cmd = nvim -d \"$LOCAL\" \"$REMOTE\"
