Add git abbreviations for quick ammendment

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -22,6 +22,8 @@ abbr dc docker compose
 ### Git abbreviations
 abbr gswm git switch \(__git.default_branch\)
 abbr gswd git switch develop
+abbr gc!! git commit --amend --no-edit
+abbr gca!! git commit --amend --no-edit --all
 
 ## Chezmoi abbreviation
 abbr cm chezmoi
