Add comment on git pruneTags setting

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -69,7 +69,7 @@
 
 [fetch]
 	prune = true
-	pruneTags = true
+	pruneTags = true ; set this to false in a repo where tags are frequenly being moved i.e. "nightly" tag
 	all = true
 
 [commit]
