Fix typo in GOPATH variable

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -45,7 +45,7 @@ alias here "explorer.exe ."
 alias here "open ."
 {{- end }}
 set -gx EDITOR nvim
-set -gx GO_PATH $HOME/.go
+set -gx GOPATH $HOME/.go
 set -gx MANPAGER "nvim +Man!"
 
 # Enable true color support
